<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Transfer">

    <TextView
        android:id="@+id/transfer_money"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transfer_money"
        android:textSize="30sp">

    </TextView>


    <EditText
        android:id="@+id/moneytotransfer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_amount_to_transfer"
        android:textAllCaps="false"
        android:textSize="@dimen/inputs"
        android:layout_marginTop="25dp"
        android:inputType="number"
        android:autofillHints="" />

    <EditText
        android:id="@+id/accounttrans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_account_number"
        android:textAllCaps="false"
        android:textSize="@dimen/inputs"
        android:layout_marginTop="25dp"
        android:inputType="number"
        android:autofillHints="" />



    <Button
        android:id="@+id/transfer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:text="@string/transfer"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:layout_margin="20dp"/>


</LinearLayout>