<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:textAlignment="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#0066ff"

            android:minHeight="?attr/actionBarSize"
            android:textAlignment="center"
            android:theme="?attr/actionBarTheme"
            app:logo="@drawable/bsacco"
            app:subtitle="Together wx-special/nautilus-clipboard
copy
file:///root/Downloads/Trial/app/src/main/res/drawable/bsacco.png
ith Love"
            app:title="BSACCO"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textAlignment="center">

        <TextView
            android:id="@+id/mission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mission"
            android:textAlignment="inherit"
            android:textColor="#003399"
            android:textSize="26sp"
            android:textStyle="bold"

            app:fontFamily="sans-serif-light" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mission"
            android:textColor="#1a001a"
            android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/who"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/who"
            android:textColor="@color/background_color"
            android:textSize="26sp"
            android:textStyle="bold"
            app:fontFamily="sans-serif-light" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/who_t"
            android:textColor="#1a001a"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ben"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/benefit"
            android:textColor="#003399"
            android:textSize="26sp"
            android:textStyle="bold"
            app:fontFamily="sans-serif-light"
            tools:ignore="HardcodedText" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_benefits"
            android:textColor="#1a001a"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textAlignment="center">

        <Button
            android:id="@+id/get_started"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:outlineAmbientShadowColor="#1a001a"
            android:text="@string/get_started" />
    </LinearLayout>

</LinearLayout>